# libre-flypy

./: .gitignore  Cargo.toml  LICENSE  README.md  idc.txt  my_ids.txt  my_pinyin.txt  rate.py
chai/: .gitignore  check.py  convert.py  flypy.py  flypy_src.schema.yaml  pyproject.toml
flypy/: process.py
ids/: Cargo.toml
ids/src/: main.rs
src/: flypy.rs  idc.rs  main.rs  pinyin.rs  roots.rs  wenshu.rs
src/ids/: mod.rs  pn.rs
