[package]
name = "ids-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "flypy"
path = "src/flypy.rs"

[[bin]]
name = "wenshu"
path = "src/wenshu.rs"


[[bin]]
name = "ids"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
ascii = "1.1.0"
pinyin = "0.9.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
