[tool.poetry]
name = "flypy-chai"
version = "0.1.0"
description = ""
authors = ["猫猫 <overflowcat@gmail.com>"]
license = "GPL-v3"

[tool.poetry.dependencies]
python = "^3.10"
pychai = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
